<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestDrive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vehicle">Vehicle</string>
    <string name="record">Record</string>
    <string name="weather">Weather condition</string>
    <string-array name="weather_items">
        <item>Rain</item>
        <item>Snow</item>
        <item>Cloudy</item>
        <item>Fog</item>
        <item>Wet</item>
        <item>Windy</item>
        <item>Dry</item>
        <item>Sunny/clear</item>
    </string-array>
    <string name="road_type">Road type</string>
    <string-array name="road_type_items">
        <item>Dirt</item>
        <item>Asphalt</item>
        <item>Gravel</item>
        <item>Concrete</item>
        <item>Off-road</item>
    </string-array>
    <string name="road_condition">Road condition</string>
    <string-array name="road_condition_items">
        <item>Smooth</item>
        <item>Slightly bumpy</item>
        <item>Bumpy</item>
        <item>Very bumpy</item>
    </string-array>
    <string name="visibility">Visibility</string>
    <string-array name="visibility_items">
        <item>Clear</item>
        <item>Slightly foggy</item>
        <item>Foggy</item>
        <item>Very foggy</item>
    </string-array>
    <string name="traffic">Traffic congestion</string>
    <string-array name="traffic_items">
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
    </string-array>
    <string name="model">Model</string>
    <string name="vin">VIN</string>
    <string name="notes">Notes</string>
    <string name="data">Data</string>
    <string name="live">Live</string>
    <string name="export">Export</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="notification_title">TestDrive is currently logging</string>
    <string name="google_play_unavailable">Google Play Services are unavailable, location logging will not work. Please update from Google Play.</string>
    <string name="saved">Saved!</string>
    <string name="copy_db">Copy database to external storage</string>
    <string name="copied_db">Copied database to %1$s</string>
    <string name="drive_started_entry">New drive started at %1$s</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_text">
        TestDrive is a product of Oakland University, Rochester, MI, USA.\n\n
        Team members: Jeffrey Quesnelle, Hubert Wolski, Yaseen Syed, Safayat Amin, Alex Galan\n\n
        Creative Commons attributions:\n
        Car icon: Icon made by http://www.icons8.com, from http://www.flaticon.com, under CC BY 3.0\n
        Cloud icon: Icon made by http://www.freepik.com, from http://www.flaticon.com CC BY 3.0\n
        Location icon: Icon made by http://www.simpleicon.com, from http://www.flaticon.com, under CC BY 3.0\n
        Concrete icon: Icon made by http://www.freepik.com, from http://www.flaticon.com, under CC BY 3.0\n
        Road icon: Icon made by http://www.freepik.com, from http://www.flaticon.com, under CC BY 3.0\n
        Foggy icon: Icon made by http://catalinfertu.com, from http://www.flaticon.com, under CC BY 3.0\n
        Traffic icon: Icon made by http://www.icons8.com, from http://www.flaticon.com, under CC BY 3.0
    </string>
    <string name="value_changed">%1$s changed to %2$s</string>
    <string name="value_changed_separator">,\u0020</string>
    <string name="value_changed_ending">.</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="bearing">Bearing</string>
    <string name="speed">Speed</string>
    <string name="location_updated">Location updated</string>
    <string name="nothing_changed">Nothing changed</string>
    <string name="clear_database">Clear database</string>
    <string name="database_cleared">Database cleared!</string>
    <string name="delete_drive">Delete this drive and ALL entrties associated with it?</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete_entry">Delete this entry?</string>
</resources>
